Bug 406010 - AT-SPI SHOWING and VISIBLE issues on documents, patch=ginn.chen, r=aaronlev, a=mtschrep